--- a/hw5/src/components/article/article.css
+++ b/hw5/src/components/article/article.css
@@ -36,19 +36,19 @@
 	color: #555;
 	background-color: #fff;
 	background-image: none;
-	border: 1px solid #ccc;
-	border-radius: 4px;
+	border: 0px solid #ccc;
+	border-radius: 0px;
 }
 .commentinline .reset {
     position: absolute;
-    right: 1%;
+    right: 5px;
     margin-top: 1%;
     border: 0;
 }
 
 .commentinline .submit {
     position: absolute;
-    right: 5%;
+    right: 40px;
     margin-top: 1%;
     border: 0;
     margin-right: 2%;
@@ -89,7 +89,7 @@
 }
 .post .post-footer {
     border-top: 1px solid #ddd;
-    padding: 15px;
+    padding: 0px;
 }
 
 .post .post-footer .comments-list {
@@ -137,14 +137,8 @@
     margin-right: 5%;
 }
 .status-update {
-    width: 67.65%;
-    float: left;
-    position: relative;
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
     margin-bottom: 5px;
-
 }
 
 .status-update-button {
@@ -202,5 +196,21 @@
 
 .uploadContainer {
     display: inline-block;
+    text-align: right
 }
+
+.uploadContainer-submit {
+    position: absolute;
+    right: 55px;
+    border: 0;
+    background-color: #f5f5f5;
+}
+
+.uploadContainer-reset {
+    position: absolute;
+    right: 17px;
+    border: 0;
+    background-color: #f5f5f5;
+}
+
 
