--- a/hw5/src/components/main/main.css
+++ b/hw5/src/components/main/main.css
@@ -1,3 +1,4 @@
+
 .followingImage{
 	height:45px;
 	width:45px;
@@ -62,15 +63,14 @@
 }
 
 .simpleprofile-part {
-	position: relative;
-	min-height: 1px;
-	width: 16.66666667%;
-	float: left;
+	padding-right: 1px;
+	padding-left: 1px;
 }
+
 
 .thumbnail {
 	display: block;
-	margin-bottom: 5px;
+	margin-bottom: 3px;
 	line-height: 1.42857143;
 	background-color: #fff;
 	border: 1px solid #F2F2F2;
