--- a/hw5/src/components/profile/profile.css
+++ b/hw5/src/components/profile/profile.css
@@ -1,9 +1,5 @@
 .profile-card{
-	position: relative;
-	margin: 2% auto;
 	background-color: #fff;
-	padding: 0; 
-	width: 400px;
 	border: none; 
 	box-shadow: 0 3px 15px 0 rgba(0,0,0,.16);
 }
@@ -32,7 +28,6 @@ input: placeholder-shown {
 }
 
 .user-avatar {
-	width: 400px;
 	height: 300px;
 	overflow: hidden;
 }
@@ -45,24 +40,21 @@ input: placeholder-shown {
 	background-color: #f5f5f5;
 	display: inline-block;
 	width: 100%;
-	height: 36px;
+	height: 30px;
 }
 .update-button {
 	position: absolute;
-	margin-top: 0%;
-	padding: .4em .6em;
-	box-sizing: border-box;
-	font-size: 16px;
-	border-radius: 2px;
-	border: solid 0px;
-	background-color: #f5f5f5;
-	color: gray;
-	right: 0;
+	margin-top: 3px;
+    right: 20px;
+    border: 0;
+    background-color: #f5f5f5;
 }
 .user-profile {
 	display:block;
 }
 .upload-inline {
-	position: absolute;
-    left: 0;
+	position: relative;
+    display: inline-block;
+    border-collapse: separate;
+    float:left;
 }
